Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8228

Activate completion of STL such as QStringList ,QList, QVector and QHash etc. dose not work well

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 2.6.1
    • Qt Creator 2.6.0
    • Editors
    • None
    • 22c3bd244fe3736eac3898a9c9df44f3ec0255b8, 56966f3712b9ec2d790b7185d230d3193f261a62

      The completion of containers are broken.
      See attached pictures.

        1. QTC2.5.2_works_well.png
          5 kB
          gateslu
        2. QTC2.6dosenotwork.png
          1 kB
          gateslu
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            erikv Erik Verbruggen
            gateslu gateslu
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes