src/plugins/cpptools/cpptoolsplugin.h
@@ -96,6 +96,7 @@ private slots:
     void test_completion_template_3();
     void test_completion_template_4();
     void test_completion_template_5();
+    void test_completion_template_6();
     void test_completion_template_as_base();
     void test_completion_template_as_base_data();
     void test_completion_use_global_identifier_as_base_class();
